--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.27.2",
+    "bootstrap": "^5.2.3",
     "moment": "^2.29.4",
     "nprogress": "^0.2.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
+    "react-google-button": "^0.7.2",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4",
     "workbox-background-sync": "^6.5.4",
